# geospatial-data-agents

./: main.py  pyproject.toml
configs/: db.py
ingestion/: csv_loader.py  load_sample_data.py  metadata_logger.py  run_csv_load.py  test_connection.py
raw_data/: sample_foi_data.csv
